syntax = "proto3";

package chat;
option go_package = "lib/proto/chat";

//HTTP POST request: /chatgpt/chat
message ChatReq{
    string content = 1;
}

//HTTP POST request: /chatgpt/chat
message ChatRsp{
    // response code
    int64 code = 1;
    // response message
    string message = 2;

    // data
    ChatResult data = 3;
}

message ChatResult{
    string id = 1;
    string object = 2;
    int64 created = 3;
    string model = 4;
    Usage usage = 5;
    string message = 6;
}

message Usage{
    int32 prompt_tokens = 1;
    int32 completion_tokens = 2;
    int32 total_tokens = 3;
}

//HTTP POST request: /chatgpt/completion
message CompletionReq{
    string prompt = 1;
}

//HTTP POST request: /chatgpt/completion
message CompletionRsp{
    // response code
    int64 code = 1;
    // response message
    string message = 2;

    // data
    ChatResult data = 3;
}

enum EditsModelType //枚举消息类型，使用enum关键词定义,一个电话类型的枚举类型
{
    DEFAULT = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
    TEXT = 1;
    CODE = 2;
}

//HTTP POST request: /chatgpt/edits
message EditsReq{
    string input = 1;

    string instruction = 2;

    EditsModelType model_type = 3;
}

//HTTP POST request: /chatgpt/image/create
message CreateImageReq{
    string prompt = 1;

    // "small":256*256 "middle":512*512 "big":1024*1024
    string size = 2;

    // "url" or "json"
    string format = 3;
}